stderr
ChristmasSong.java:20: error: cannot find symbol
          return verse.toString;
                      ^
  symbol:   variable toString
  location: variable verse of type StringBuilder
1 error
